--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <a href="#home">início</a>
         <a href="#about">sobre mim</a>
-        <a href="#services">serviços</a>
+        <a href="#services">linguagem</a>
         <a href="#portfolio">portfólio</a>
         <a href="#contact">contato</a>
     </nav>
@@ -114,7 +114,7 @@
 
 <section class="services" id="services">
 
-    <h1 class="heading"> meus <span>serviços</span> </h1>
+    <h1 class="heading">dominio nas <span>linguagems </span> </h1>
 
     <div class="box-container">
 
