Update Code Git

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h3>Leonardo Siqueira</h3>
         <p>Engenheiro de Software Full Stack</p>
         <img height="400em" src="https://user-images.githubusercontent.com/70382532/138322189-2db8df52-9dcb-40a0-88a8-c365466bd33d.gif"/>
-        <div align="center">
-            <a href="https://github.com/LeOzInNDF">
+        <div>
             <img height="160em" src="https://github-readme-stats.vercel.app/api?username=LeOzInNDF&show_icons=true&theme=radical&include_all_commits=true&count_private=true"/>
             <img height="160em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=LeOzInNDF&layout=compact&langs_count=7&theme=radical"/>
+        </div>
     <!--  <a href="#" class="btn">download CV</a> -->
     </div>
 
