--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img class="git" height="500em" src="https://user-images.githubusercontent.com/70382532/138322189-2db8df52-9dcb-40a0-88a8-c365466bd33d.gif"/>
         <div>
             <img height="160em" src="https://github-readme-stats.vercel.app/api?username=LeOzInNDF&show_icons=true&theme=radical&include_all_commits=true&count_private=true"/>
-            <img height="200em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=LeOzInNDF&layout=compact&langs_count=7&theme=radical"/>
+            <img height="160em" width="100em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=LeOzInNDF&layout=compact&langs_count=7&theme=radical"/>
        
             <div class="share">
                 <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram"></a>
