--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <a href="#services">linguagem</a>
         <a href="#portfolio">portfólio</a>
         <a href="#contact">contato</a>
+        <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/leozinndf/" target="_blank" class="fab fa-linkedin"></a>
+        <a href="https://github.com/LeOzInNDF" target="_blank" class="fab fa-github"></a>
+        <a href="#" target="_blank" class="fab fa-pinterest"></a>
     </nav>
 
 </header>
@@ -59,12 +63,13 @@
 </section>
 
 
-<div class="share">
+<!-- <div class="share">
     <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram"></a>
     <a href="https://www.linkedin.com/in/leozinndf/" target="_blank" class="fab fa-linkedin"></a>
     <a href="https://github.com/LeOzInNDF" target="_blank" class="fab fa-github"></a>
     <a href="#" target="_blank" class="fab fa-pinterest"></a>
 </div>
+-->
 
 <section class="about" id="about">
 
