--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
 
 </header>
 
-<div id="menu-btn" class="fas fa-bars"></div>
+<div id="menu-btn" class="fas fa-bars">
+    <a href="#home">início</a>
+    <a href="#about">sobre mim</a>
+    <a href="#services">linguagem</a>
+    <a href="#portfolio">portfólio</a>
+    <a href="#contact">contato</a>
+    <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram">instagram</a>
+    <a href="https://www.linkedin.com/in/leozinndf/" target="_blank" class="fab fa-linkedin">linkedin</a>
+    <a href="https://github.com/LeOzInNDF" target="_blank" class="fab fa-github">github</a>
+
+</div>
 
 <!--  alternador de tema -->
 
