--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 </header>
 
 <div id="menu-btn" class="fas fa-bars">
+    <nav class="navbar">
     <a href="#home">início</a>
     <a href="#about">sobre mim</a>
     <a href="#services">linguagem</a>
@@ -42,6 +43,7 @@
     <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram">instagram</a>
     <a href="https://www.linkedin.com/in/leozinndf/" target="_blank" class="fab fa-linkedin">linkedin</a>
     <a href="https://github.com/LeOzInNDF" target="_blank" class="fab fa-github">github</a>
+    </nav>
 
 </div>
 
