--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 </section>
 
 
-<!-- <div class="share">
+ <div class="share">
     <a href="https://instagram.com/leozinndf" target="_blank" class="fab fa-instagram"></a>
     <a href="https://www.linkedin.com/in/leozinndf/" target="_blank" class="fab fa-linkedin"></a>
     <a href="https://github.com/LeOzInNDF" target="_blank" class="fab fa-github"></a>
     <a href="#" target="_blank" class="fab fa-pinterest"></a>
 </div>
--->
+
 
 <section class="about" id="about">
 
