--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Portfólio Leonardo Siqueira Albano</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://www.googleoptimize.com/optimize.js?id=OPT-5TF53XJ"></script>
 </head>
 
 <body>
